5/packages/angular_test/src/errors/generic_type_missing.module
{"p":["angular_test","lib/src/errors/generic_type_missing.dart"],"s":[["angular_test","lib/src/errors/generic_type_missing.dart"]],"d":[]}